--- a/.travis.yml
+++ b/.travis.yml
@@ -27,9 +27,6 @@ matrix:
       env: CHECK="check:symlinks check:git_ignore check:dot_underscore check:test_file rubocop syntax lint metadata_lint"
       stage: static
     -
-      env: CHECK="strings:generate:reference"
-      stage: static
-    -
       env: PUPPET_GEM_VERSION="~> 5.0" CHECK=parallel_spec
       rvm: 2.4.5
       stage: spec
@@ -38,7 +35,7 @@ matrix:
       rvm: 2.5.3
       stage: spec
     -
-      env: DEPLOY_TO_FORGE=yes
+      env: CHECK="strings:generate:reference" DEPLOY_TO_FORGE=yes
       stage: deploy
 branches:
   only:
